# geofacetpy

./: .flake8  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
geofacetpy/: __init__.py  geofacetpy.py
tests/: test_geofacet.py
